--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="My name is Sharon Boluwatife Da-silva, Wdd130, to build my home page.">
+
+    <meta name="author" content="Sharon Boluwatife Da-silva">
     <title>Sharon Boluwatife Da-silva| WDD 130</title>
 </head>
+
 <body>
-    <header>12
+    <header>
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
@@ -16,14 +21,24 @@
     <main>
         <h1>Sharon Boluwatife Da-silva | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Sharon Boluwatife Da-silva" width="200">
-        <p>Hello! My name is Sharon Boluwatife Da-silva and I am from Akure, Ondo State/Nigeria. and I am excited to be part of the Web Fundamentals course at BYU-Idaho. 
-            I have a deep passion for reading novels, finding joy and insight in a wide range of literary works. 
-            Additionally, I am an active member of The Church of Jesus Christ of Latter-day Saints, where I find great fulfillment in my faith and community service.
-            In my free time, I enjoy exploring new technologies, which is why I am particularly enthusiastic about this course. 
+        <p>Hello! My name is Sharon Boluwatife Da-silva and I am from Akure, Ondo State/Nigeria. and I am excited to be
+            part of the Web Fundamentals course at BYU-Idaho.
+            I have a deep passion for reading novels, finding joy and insight in a wide range of literary works.
+            Additionally, I am an active member of The Church of Jesus Christ of Latter-day Saints, where I find great
+            fulfillment in my faith and community service.
+            In my free time, I enjoy exploring new technologies, which is why I am particularly enthusiastic about this
+            course.
             I look forward to learning and growing alongside all of you this semester.</p>
     </main>
+    <aside>
+        <h2>Ondo</h2>
+        <img src="images/ondo.jpg" alt="Ondo landscape">
+        <p>Ondo is a state in Nigeria . It borders Ekiti State to the north, Kogi State to the northeast for 45 km, Edo
+            State to the east, Delta State to the southeast for 36 km, Ogun State. The state is a center of
+            transportation, education, information technology, and research.</p>
+    </aside>
     <footer>
-        <p>&copy; 2024 set 🌴 Sharon Boluwatife Da-silva 🌴 Ondo State,Nigeria.</p>
+   <p>&copy; 2024 set 🌴 Sharon Boluwatife Da-silva 🌴 Ondo State,Nigeria.</p>
     </footer>
 </body>
 </html>
