--- a/pratice.html
+++ b/pratice.html
@@ -12,11 +12,11 @@
         <div class="container-child-1">
             container child 1
         </div>
-    </div>
-    <div> class="container">
-
-
-
+    <div class="container">
+        container
+        <div class="container-child-1">
+            container child 2
+        </div>
     </div>
 </body>
 </html>
