--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Rafting Site Plan |Sharon Boluwatife Da-Silva</title>
-    <meta name="whitewater rafting are outdoor entertainment activities that use a boat or an unsinkable raft. It has different difficulty levels according to the current of the water in which the sport is done. It can be done solo but is more commonly done with groups and needs good teamwork to manage the water" content="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
-    <meta name="author" content="Sharon Boluwatife Da-silva">
+    <meta name="author" content="Sharon Boluwatife Da-Silva">
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
+    
   </head>
-    ...
 </html>
 <header>
   <h1>Rafting Site Plan</h1>
@@ -20,25 +19,21 @@
   <a href="#">Trips</a>
   <a href="#">Contact Us</a>
 </nav>
-(main)
 <main>
-  <h2>Overview</h2>
-
-  <h3>Purpose</h3>
+  <h2>Whitewater rafting are outdoor entertainment activities that use a boat or an unsinkable raft. It has different difficulty levels according to the current of the water in which the sport is done. It can be done solo but is more commonly done with groups and needs good teamwork to manage the water".</h2>
+ <h3>White water rafting is an adventurous and healthy way of exploring nature while diving deeper into the waters of the rivers. </h3>
   <p></p>
   <h3>Audience</h3>
   <p></p>
-
-  <h2>Branding</h2>
-
-  <h3>Website Logo</h3>
-  <img src="images/logo.png" alt="Rafting Site Logo">
-
+<h2>Branding</h2>
+ <h3>Website Logo</h3>
+  <img src="images/logo.png" alt="images/Logo.png">
   <h2>Style Guide</h2>
-
-  <h3>Color Palette</h3>
-  <p></p>
-  <h3>Typography</h3>
+  <h3>
+    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">color pallete </a></h3>
+  <h3><style>
+    @import url('https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap');
+    </style></h3>
   <h4>Headings Example Font</h4>
   <h4>Normal Text/Paragraph Example Font</h4>
   <p>Example text - Lorem ipsum.</p>
