Updated My Project

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -6,13 +6,12 @@
     <title>Rafting Site Plan |Sharon Boluwatife Da-Silva</title>
     <meta name="author" content="Sharon Boluwatife Da-Silva">
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
-    
-  </head>
-</html>
+    </head>
+    <body>
 <header>
   <h1>Rafting Site Plan</h1>
-  <div>Sharon Boluwatife Da-Silva</div>
-</header>            
+  <div><p>Sharon Boluwatife Da-Silva</p></div>
+</header>           
 <nav>
   <a href="#">Home</a>
   <a href="#">About Us</a>
@@ -20,34 +19,43 @@
   <a href="#">Contact Us</a>
 </nav>
 <main>
-  <h2>Whitewater rafting are outdoor entertainment activities that use a boat or an unsinkable raft. It has different difficulty levels according to the current of the water in which the sport is done. It can be done solo but is more commonly done with groups and needs good teamwork to manage the water".</h2>
- <h3>White water rafting is an adventurous and healthy way of exploring nature while diving deeper into the waters of the rivers. </h3>
-  <p></p>
-  <h3>Audience</h3>
-  <p></p>
+<section>
+  <h2>Overview</h2>
+  <section>
+    <h2>Purpose</h2>
+  <p>Whitewater rafting are outdoor entertainment activities that use a boat or an unsinkable raft. It has different difficulty levels according to the current of the water in which the sport is done. It can be done solo but is more commonly done with groups and needs good teamwork to manage the water".</p>
+  <p>White water rafting is an adventurous and healthy way of exploring nature while diving deeper into the waters of the rivers. </p>
+  </section>
+<section>
+  <h2>Audience</h2>
+  <h3> What is white water rafting?</h3>
+  <p> Water rafting is an outdoor recreational activity that involves navigating a river in an inflatable raft. Participants use paddles to steer and propel the raft, often encountering rapids and obstacles in the water.</p>
+<h3> What should I wear for white water rafting?</h3>
+<p>Wear quick-drying clothing, such as a swimsuit or synthetic sportswear. Avoid cotton as it retains water. It's also recommended to wear water shoes or sandals with straps, and always bring a hat, sunglasses, and sunscreen.</p>
+    <h3>Is white water rafting safe?</h3>
+   <p>White water rafting is generally safe when conducted with experienced guides and proper safety equipment. Life jackets and helmets are mandatory, and guides are trained to handle emergencies. It's important to follow all safety instructions provided. </p>
+ </section>
 <h2>Branding</h2>
+<section>
  <h3>Website Logo</h3>
   <img src="images/logo.png" alt="images/Logo.png">
+</section>
   <h2>Style Guide</h2>
-  <h3>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">color pallete </a></h3>
-  <h3><style>
-    @import url('https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap');
-    </style></h3>
+  <section>
+  <h3>color Palette</h3>
+    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">color pallete </a>
+    </section>
+  <section>
+   <h3>Typography</h3>
+    <a href="https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap"></a>
+    </section>
   <h4>Headings Example Font</h4>
   <h4>Normal Text/Paragraph Example Font</h4>
   <p>Example text - Lorem ipsum.</p>
   <h4>Colored Callout Example Font</h4>
   <p>Example text - Lorem ipsum</p>
   <h3>Navigation</h3>
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">About Us</a>
-    <a href="#">Trips</a>
-    <a href="#">Contact Us</a>
-  </nav>
-
-  <h2>Wireframes</h2>
+ <h2>Wireframes</h2>
   <h3>Home Page Wireframe</h3>
   <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Required Home Page Wireframe Design" width="700">
   <h3>About Us Page Wireframe</h3>
@@ -57,3 +65,5 @@
 <footer>
   <p>©2024 🌴 Rafting Site Document 🌴 Sharon Boluwatife Da-Silva🌴 WDD 130</p>
 </footer>
+</body>
+</html>
