updated my header

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Rafting Site Plan |Sharon Boluwatife Da-Silva</title>
     <meta name="author" content="Sharon Boluwatife Da-Silva">
+    <meta name="description" content="My name is Sharon Boluwatife Da-silva, Wdd130, to build site-plan-rafting">
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
     </head>
     <body>
 <header>
   <h1>Rafting Site Plan</h1>
   <div><p>Sharon Boluwatife Da-Silva</p></div>
+
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About Us</a>
+    <a href="#">Trips</a>
+    <a href="#">Contact Us</a>
+  </nav>
 </header>           
-<nav>
-  <a href="#">Home</a>
-  <a href="#">About Us</a>
-  <a href="#">Trips</a>
-  <a href="#">Contact Us</a>
-</nav>
 <main>
 <section>
   <h2>Overview</h2>
