--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -60,8 +60,7 @@
   <h3>Home Page Wireframe</h3>
   <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Required Home Page Wireframe Design" width="700">
   <h3>About Us Page Wireframe</h3>
-  <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png"
-  alt="About Us Page Wireframe Design" width="700">
+  <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
 </main>
 <footer>
   <p>©2024 🌴 Rafting Site Document 🌴 Sharon Boluwatife Da-Silva🌴 WDD 130</p>
