--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -8,17 +7,18 @@
     <link rel="stylesheet" href="styles/styles.css">
     <meta name="author" content="Sharon Boluwatife Da-silva">
     <title>Sharon Boluwatife Da-silva| WDD 130</title>
-</head>
-
-<body>
+ </head>
+ <body>
     <header>
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            <a href="https://linkedin.com "></a>
+            <a href="https://facebook.com "></a>
         </nav>
-    </header>
-    <main>
+     </header>
+     <main>
         <h1>Sharon Boluwatife Da-silva | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Sharon Boluwatife Da-silva" width="200">
         <p>Hello! My name is Sharon Boluwatife Da-silva and I am from Akure, Ondo State/Nigeria. and I am excited to be
@@ -28,7 +28,13 @@
             fulfillment in my faith and community service.
             In my free time, I enjoy exploring new technologies, which is why I am particularly enthusiastic about this
             course.
-            I look forward to learning and growing alongside all of you this semester.</p>
+            I look forward to learning and growing alongside all of you this semester.</p> 
+<ul>
+<ul class="box"></ul>
+  <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba Nigeria Temple</a></li>
+  <li><a href="https://www.churchofjesuschrist.org/temples/details/abidjan-ivory coast-temple" target="_blank">abidjan-ivory coast-Temple Temple</a></li>
+  <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
+</ul>
     </main>
     <aside>
         <h2>Ondo</h2>
@@ -38,7 +44,7 @@
             transportation, education, information technology, and research.</p>
     </aside>
     <footer>
-   <p>&copy; 2024 set 🌴 Sharon Boluwatife Da-silva 🌴 Ondo State,Nigeria.</p>
     </footer>
 </body>
+<!-- Last modified: June 27, 2024 -->
 </html>
