updated homepage enhancement

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -7,8 +8,9 @@
     <link rel="stylesheet" href="styles/styles.css">
     <meta name="author" content="Sharon Boluwatife Da-silva">
     <title>Sharon Boluwatife Da-silva| WDD 130</title>
- </head>
- <body>
+</head>
+
+<body>
     <header>
         <nav>
             <a href="#">Home</a>
@@ -17,8 +19,8 @@
             <a href="https://linkedin.com "></a>
             <a href="https://facebook.com "></a>
         </nav>
-     </header>
-     <main>
+    </header>
+    <main>
         <h1>Sharon Boluwatife Da-silva | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Sharon Boluwatife Da-silva" width="200">
         <p>Hello! My name is Sharon Boluwatife Da-silva and I am from Akure, Ondo State/Nigeria. and I am excited to be
@@ -28,23 +30,29 @@
             fulfillment in my faith and community service.
             In my free time, I enjoy exploring new technologies, which is why I am particularly enthusiastic about this
             course.
-            I look forward to learning and growing alongside all of you this semester.</p> 
-<ul>
-<ul class="box"></ul>
-  <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba Nigeria Temple</a></li>
-  <li><a href="https://www.churchofjesuschrist.org/temples/details/abidjan-ivory coast-temple" target="_blank">abidjan-ivory coast-Temple Temple</a></li>
-  <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
-</ul>
+            I look forward to learning and growing alongside all of you this semester.</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba
+                    Nigeria Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/abidjan-ivory coast-temple"
+                    target="_blank">abidjan-ivory coast-Temple Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple"
+                    target="_blank">Berlin Germany Temple</a></li>
+        </ul>
     </main>
     <aside>
         <h2>Ondo</h2>
-        <img src="images/ondo.jpg" alt="Ondo landscape">
-        <p>Ondo is a state in Nigeria . It borders Ekiti State to the north, Kogi State to the northeast for 45 km, Edo
-            State to the east, Delta State to the southeast for 36 km, Ogun State. The state is a center of
-            transportation, education, information technology, and research.</p>
+        <ul class="box">
+            <img src="images/ondo.jpg" alt="Ondo landscape">
+            <p>Ondo is a state in Nigeria . It borders Ekiti State to the north, Kogi State to the northeast for 45 km,
+                Edo
+                State to the east, Delta State to the southeast for 36 km, Ogun State. The state is a center of
+                transportation, education, information technology, and research.</p>
+        </ul>
     </aside>
     <footer>
     </footer>
 </body>
 <!-- Last modified: June 27, 2024 -->
+
 </html>
