--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
 
 <body>
     <header>
+        <h1>Course Home page</h1>
+    </header>
         <nav>
+            <ul>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
             <a href="https://linkedin.com "></a>
             <a href="https://facebook.com "></a>
+        </ul>
         </nav>
-    </header>
+        <div class="grid">
     <main>
+        <div class="grid">
         <h1>Sharon Boluwatife Da-silva | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Sharon Boluwatife Da-silva" width="200">
         <p>Hello! My name is Sharon Boluwatife Da-silva and I am from Akure, Ondo State/Nigeria. and I am excited to be
@@ -39,8 +44,10 @@
             <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple"
                     target="_blank">Berlin Germany Temple</a></li>
         </ul>
+    </div>
     </main>
     <aside>
+        <div class="grid"
         <ul class="box">
             <img src="images/ondo.jpg" alt="Ondo landscape">
             <p>Ondo is a state in Nigeria . It borders Ekiti State to the north, Kogi State to the northeast for 45 km,
