--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
     <header>
         <h1>Course Home page</h1>
-    </header>
         <nav>
             <ul>
-            <a href="#">Home</a>
-            <a href="wwr/">Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-            <a href="https://linkedin.com "></a>
-            <a href="https://facebook.com "></a>
+           <li><a href="#">Home</a></li> 
+           <li> <a href="wwr/">Rafting Website</a></li>
+           <li><a href="wwr/site-plan-rafting.html">Rafting Site Plan</a></li>
+           <li><a href="https://linkedin.com "></a></li>
+           <li><a href="https://facebook.com "></a></li>
+    </header>
         </ul>
         </nav>
         <div class="grid">
@@ -37,22 +37,17 @@
             course.
             I look forward to learning and growing alongside all of you this semester.</p>
         <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba
-                    Nigeria Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/abidjan-ivory coast-temple"
-                    target="_blank">abidjan-ivory coast-Temple Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple"
-                    target="_blank">Berlin Germany Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba Nigeria Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/abidjan-ivory coast-temple" target="_blank">abidjan-ivory coast-Temple Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
         </ul>
     </div>
     </main>
     <aside>
-        <div class="grid"
-        <ul class="box">
-            <img src="images/ondo.jpg" alt="Ondo landscape">
-            <p>Ondo is a state in Nigeria . It borders Ekiti State to the north, Kogi State to the northeast for 45 km,
-                Edo
-                State to the east, Delta State to the southeast for 36 km, Ogun State. The state is a center of
+        <div>class="grid"
+            <div class="box">
+           <ul><img src="images/ondo.jpg" alt="Ondo landscape">
+            <p>Ondo is a state in Nigeria . It borders Ekiti State to the north, Kogi State to the northeast for 45 km,Edo State to the east, Delta State to the southeast for 36 km, Ogun State. The state is a center of
                 transportation, education, information technology, and research.</p>
         </ul>
     </aside>
