--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
            <li><a href="#">Home</a></li> 
            <li> <a href="wwr/">Rafting Website</a></li>
            <li><a href="wwr/site-plan-rafting.html">Rafting Site Plan</a></li>
-           <li><a href="https://linkedin.com "></a></li>
-           <li><a href="https://facebook.com "></a></li>
-    </header>
-        </ul>
+           <li><a href="https://linkedin.com ">linkedin</a></li>
+           <li><a href="https://facebook.com ">Facebook</a></li>
+             </ul>
         </nav>
+    </header>
         <div class="grid">
     <main>
-        <div class="grid">
         <h1>Sharon Boluwatife Da-silva | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Sharon Boluwatife Da-silva" width="200">
         <p>Hello! My name is Sharon Boluwatife Da-silva and I am from Akure, Ondo State/Nigeria. and I am excited to be
@@ -39,18 +38,25 @@
             <li><a href="https://www.churchofjesuschrist.org/temples/details/abidjan-ivory coast-temple" target="_blank">abidjan-ivory coast-Temple Temple</a></li>
             <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
         </ul>
-    </div>
     </main>
     <aside>
-        <div>class="grid"
+        <div class="grid">
             <div class="box">
            <ul><img src="images/ondo.jpg" alt="Ondo landscape">
             <p>Ondo is a state in Nigeria . It borders Ekiti State to the north, Kogi State to the northeast for 45 km,Edo State to the east, Delta State to the southeast for 36 km, Ogun State. The state is a center of
                 transportation, education, information technology, and research.</p>
-        </ul>
+            </div>
     </aside>
     <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 Sharon Boluwatife Da-silva. All rights reserved.</p>
+            <ul>
+                <li><a href="privacy.html">Privacy Policy</a></li>
+                <li><a href="terms.html">Terms of Service</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </div>    
     </footer>
-</body>
-<!-- Last modified: June 27, 2024 -->
+<!-- Last modified: June 27, 2024
+ </body> -->
 </html>
