--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             </ul>
         </div>    
     </footer>
-<!-- Last modified: June 27, 2024
- </body> -->
+     <!-- Last modified: June 27, 2024 -->
+</body>
 </html>
+      
+
+        
