--- a/index.html
+++ b/index.html
@@ -39,14 +39,12 @@
             <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
         </ul>
     </main>
-    <aside>
-        <div class="grid">
-            <div class="box">
+    <aside class="box">
            <ul><img src="images/ondo.jpg" alt="Ondo landscape">
             <p>Ondo is a state in Nigeria . It borders Ekiti State to the north, Kogi State to the northeast for 45 km,Edo State to the east, Delta State to the southeast for 36 km, Ogun State. The state is a center of
                 transportation, education, information technology, and research.</p>
-            </div>
     </aside>
+    </div>
     <footer>
         <div class="footer-content">
             <p>&copy; 2024 Sharon Boluwatife Da-silva. All rights reserved.</p>
