updated about home

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,44 +10,69 @@
 </head>
 <body>
 <header>
-  <nav>
-  </nav>
+    <img src="images/logo.png" alt="Site Logo">
+    <h1>Rafting Company Name</h1>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#tours">Tours</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 </header>
 <main>
-  <div class="hero">
-    <img src="images/..." alt="...">
-    <h1>Rafting Company Name</h1>
-    <article>
-      <img src="images/rafting.png" alt="...">
-      <p>Lorem ipsum dolor sit amet consectetur ...</p>
-    </article>
-  </div>
-  <section>
-    <h2>History</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing ...</p>
-  </section>
-  <section>
-    <h2>Adventure Awaits You!</h2>
-    <img src="images/..." alt="...">
-    <img src="images/..." alt="...">
-    <img src="images/..." alt="...">
-    <img src="images/..." alt="...">
-    <img src="images/..." alt="...">
-  </section>
+    <div class="hero">
+        <img src="images/hero.jpg" alt="Hero Image">
+        <article>
+            <img src="images/rafting.png" alt="Rafting Image">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </article>
+    </div>
+    <section id="history">
+        <h2>Our History</h2>
+        <p>Founded in 1990, our rafting company has been providing unforgettable adventures for over three decades. We started with a small team of passionate rafters and have grown into one of the most trusted names in the industry. Our commitment to safety, fun, and environmental stewardship has earned us a loyal following of adventure seekers from around the world.</p>
+        <p>Over the years, we've expanded our offerings to include a variety of trips, from half-day excursions to multi-day adventures. Whether you're looking for a leisurely float down a scenic river or the adrenaline rush of navigating Class V rapids, we have something for everyone.</p>
+        <p>Our guides are experienced professionals who are dedicated to providing an exceptional experience for each and every guest. Join us and become part of our storied history as we continue to explore new rivers and create new memories.</p>
+    </section>
+    <section id="adventures">
+        <h2>Adventure Awaits You!</h2>
+        <figure>
+            <img src="images/adventure1.jpg" alt="Los Dientes del Diablo">
+            <figcaption>Los Dientes del Diablo</figcaption>
+        </figure>
+        <figure>
+            <img src="images/adventure2.jpg" alt="Big Mallard">
+            <figcaption>Big Mallard</figcaption>
+        </figure>
+        <figure>
+            <img src="images/adventure3.jpg" alt="Half Day Adventure">
+            <figcaption>Half Day Adventure</figcaption>
+        </figure>
+        <figure>
+            <img src="images/adventure4.jpg" alt="Full Day Adventure">
+            <figcaption>Full Day Adventure</figcaption>
+        </figure>
+        <figure>
+            <img src="images/adventure5.jpg" alt="Thrill Seeker">
+            <figcaption>Thrill Seeker</figcaption>
+        </figure>
+    </section>
 </main>
 <footer>
-<nav class="sociallinks">
-  <a href="https://facebook.com">
-    <img src="images/facebook.svg" alt="Facebook">
-  </a>
-  <a href="https://twitter.com">
-    <img src="images/twitter.svg" alt="Twitter">
-  </a>
-  <a href="https://instagram.com">
-    <img src="images/instagram.svg" alt="Instagram">
-  </a>
-</nav>
-<p>©2024 🌴 Rafting Site Document 🌴 Sharon Boluwatife Da-Silva🌴 WDD 130</p>
-</body>
+    <nav class="sociallinks">
+        <a href="https://facebook.com">
+            <img src="images/facebook.svg" alt="Facebook">
+        </a>
+        <a href="https://twitter.com">
+            <img src="images/twitter.svg" alt="Twitter">
+        </a>
+        <a href="https://instagram.com">
+            <img src="images/instagram.svg" alt="Instagram">
+        </a>
+    </nav>
+    <p>©2024 🌴 Rafting Site Document 🌴 Sharon Boluwatife Da-Silva 🌴 WDD 130</p>
 </footer>
+<script src="script.js"></script>
+</body>
 </html>
