--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Water Rafting</title>
+    <title>About us White Water Rafting</title>
     <meta name="author" content="Sharon Boluwatife Da-Silva">
     <meta name="description" content="Experience the thrill and adventure of white water rafting! Whether you're a seasoned rafter or a first-time adventurer, our expert guides will lead you through exhilarating rapids and stunning natural landscapes. Discover the perfect blend of excitement and beauty with our customized rafting trips, designed for all skill levels. Book your white water rafting adventure today and make unforgettable memories on the water!">
     <link rel="stylesheet" href="styles/rafting.css">
