--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta description content="my name is Sharon Boluwatife Da-Silva, i built this quiz form to test my knowledge about CSS and HTML">
+    <meta description content="my name is Sharon Boluwatife Da-Silva, I built this quiz form to test my knowledge about CSS and HTML">
     <meta name="author" content="Sharon Boluwatife Da-silva">
     <title>HTML and CSS Quiz</title>
     <link rel="stylesheet" href="styles/quiz.css">
