--- a/wwr/contact-us.html
+++ b/wwr/contact-us.html
@@ -68,7 +68,7 @@
                     </li>
                     <li>
                         <input type="checkbox" id="newsletter" name="newsletter">
-                        <label for="newsletter">Please subscribe me to the monthly newsletter</label>
+                        <label for="newsletter">Please subscribe me to the weekly newsletter</label>
                     </li>
                     <li class="button">
                         <button type="submit">Send your message</button>
