--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contact Dry Oar Rafting Company to get in touch with us for general inquiries, reservation questions, or website suggestions.">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Contact Us</title>
+    <title>Contact</title>
+    <meta name="author" content="Sharon Boluwatife Da-Silva">
 </head>
 <body>
     <div id="content">
