--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -97,7 +97,7 @@
             <p>Dry Oar &copy; 2024 - Sharon Boluwatife Da-Silva</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contact-us.html">Contact Us</a></p>
-            <p><a href="wireframe.pdf" target="_blank">Wireframe</a></p>
+            <p><a href="images\wireframe.jpg" target="_blank">Wireframe</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank"><img src="images/facebook.png" alt="fb icon"></a>
                 <a href="https://twitter.com" target="_blank"><img src="images/twitter.png" alt="twitter icon"></a>
