--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="My name is Sharon Boluwatife Da-silva, Wdd130, to build my home page.">
     <link rel="stylesheet" href="styles/styles.css">
-    <meta name="author" content="Sharon Boluwatife Da-silva">
+    <meta name="author" content="Sharon Boluwatifesilva Da-">
     <title>Sharon Boluwatife Da-silva| WDD 130</title>
 </head>
 <body>
