--- a/wwr/index.html
+++ b/wwr/index.html
@@ -23,7 +23,7 @@
           
                     <div id="hero">
                               <div id="hero-box">
-                                        <img src="images/hero.jpg" alt="People Enjoying whit" id="hero-img">
+                                        <img src="images/hero.jpg" alt="People Enjoying white water rafting" id="hero-img">
                               </div>
                     </div>
                     
