--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -17,7 +17,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="site-plan-rafting.html">Site-Plan</a>
-                <a href="contact-us.html">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
