--- a/wwr/index.html
+++ b/wwr/index.html
@@ -15,6 +15,7 @@
                               <nav>
                                         <a href="index.html">Home</a>
                                         <a href="about.html">About Us</a>
+                                        <a href="trips.html">Trip</a>
                                         <a href="site-plan-rafting.html">Site-Plan</a>
                                         <a href="contact.html">Contact Us</a>
                                         <!-- <a href=""></a> -->
