--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -96,7 +96,7 @@
         <footer>
             <p>Dry Oar &copy; 2024 - Sharon Boluwatife Da-Silva</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="contact-us.html">Contact Us</a></p>
+            <p><a href="contact.html">Contact Us</a></p>
             <p><a href="images\wireframe.jpg" target="_blank">Wireframe</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank"><img src="images/facebook.png" alt="fb icon"></a>
